<resources>
    <string name="app_name">Mango Plate</string>
    <string name="facebook_app_id">419298462518109</string> <string name="fb_login_protocol_scheme">fb419298462518109</string>

    <string name="login_skip">건너뛰기</string>

    <string name="main_bottom_nav_home_title">맛집찾기</string>
    <string name="main_bottom_nav_discount_title">할인</string>
    <string name="main_bottom_nav_news_title">소식</string>
    <string name="main_bottom_nav_my_page_title">내정보</string>
    <string name="home_toolbar_tv_loc_pointer_text">지금 보고있는 지역은</string>
    <string name="home_toolbar_tv_loc_changed_text_ex"><u>수유/도봉/강북</u></string>
    <string name="toolbar_tv_loc_changed_text_ex"><u>전체 지역</u></string>
    <string name="home_vp_dummy_text1">도봉구 맛집 베스트 20곳</string>
    <string name="home_vp_dummy_text2">샐러드 맛집 베스트 15곳</string>
    <string name="home_sort_select_point">평점순</string>
    <string name="home_sort_select_recommend">추천순</string>
    <string name="home_sort_select_review">리뷰순</string>
    <string name="home_sort_select_distance">거리순</string>
    <string name="home_sort_select_distance_text">*거리순은 위치가 켜져있을 때만 가능</string>
    <string name="home_sort_select_text">정렬</string>
    <string name="home_search_recommend_word">추천 검색어</string>
    <string name="home_search_recent_word">최근 검색어</string>
    <string name="home_search_look_for_friend_word">친구 찾기</string>
    <string name="home_search_edit_hint">키워드로 검색해보세요.</string>

    <string name="details_text_loc_jibun_flag">지번</string>
    <string name="details_text_finding_load">길 찾기</string>
    <string name="details_text_navigation">내비게이션</string>
    <string name="details_text_call_taxi">택시부르기</string>
    <string name="details_text_copy_link">주소 복사</string>
    <string name="details_text_do_call">전화하기</string>
    <string name="details_text_convenience_info">편의정보</string>
    <string name="details_text_opening_time">영업시간</string>
    <string name="details_text_break_time">쉬는시간</string>
    <string name="details_text_closed_date">휴일</string>
    <string name="details_text_price">가격</string>
    <string name="details_text_price_info">특정 메뉴는 미리 전화로 얘기해야 준비 될 수도 있어요.</string>
    <string name="details_text_price_info2">전화 후 방문해주세요.</string>
    <string name="details_text_more_info">정보 더 보기</string>
    <string name="details_text_more_review">리뷰 더 보기</string>
    <string name="details_text_wrong_info">잘못 되었거나 폐점된 정보를 알려주세요.</string>
    <string name="details_text_keyword">이 식당의 인기 키워드</string>
    <string name="details_text_near_restaurant">주변 인기 식당</string>

    <string name="details_text_review_title">맛깔나는 리뷰 (%d)</string>
    <string name="details_text_great">맛있다! (%d)</string>
    <string name="details_text_good">괜찮다 (%d)</string>
    <string name="details_text_bad">별로 (%d)</string>

    <string name="review_like_count">좋아요 %d개</string>
    <string name="review_reply_count">댓글 %d개</string>
    <string name="review_restaurant_name_val"><u>%s</u></string>
    <string name="review_restaurant_loc_val"><u>%s</u></string>
    <string name="review_reply_add">답글 달기</string>

    <string name="news_text_great">맛있다!</string>
    <string name="news_text_good">괜찮다</string>
    <string name="news_text_bad">별로</string>

    <string name="location_select_list_recent">최근지역</string>
    <string name="location_select_list_about_me">내 주변</string>
    <string name="location_select_list_gangnam">서울-강남</string>
    <string name="location_select_list_gangbuk">서울-강북</string>
    <string name="location_select_list_gyeongggi">경기도</string>
    <string name="location_select_list_incheon">인천</string>
    <string name="location_select_list_daegu">대구</string>
    <string name="location_select_list_busan">부산</string>
    <string name="location_select_list_jeju">제주</string>
    <string name="location_select_list_daejeon">대전</string>
    <string name="location_select_list_gwangju">광주</string>
    <string name="location_select_list_gangwon">강원도</string>
    <string name="location_select_list_south_gs">경상남도</string>
    <string name="location_select_list_north_gs">경상북도</string>
    <string name="location_select_list_south_jr">전라남도</string>
    <string name="location_select_list_north_jr">전라북도</string>
    <string name="location_select_list_south_cc">충청남도</string>
    <string name="location_select_list_north_cc">충청북도</string>
    <string name="location_select_list_ulsan">울산</string>
    <string name="location_select_list_sejong">세종</string>
    <string name="location_select_list_japan">일본</string>
    <string name="location_select_list_china">중국</string>
    <string name="location_select_list_asia">아시아</string>
    <string name="location_select_list_europe">유럽</string>
    <string name="location_select_list_usa">미국</string>
    <string name="location_select_list_canada">캐나다</string>
    <string name="location_select_list_central_south_usa">중남미</string>
    <string name="location_select_list_oceania">오세아니아</string>
    <string name="location_select_list_etc">해외기타</string>
    <string name="location_select_text_many_loc_title"><u>"%s 외 %d곳"</u></string>

    <string name="add_fragment_eat_deal">EAT딜 보러가기</string>
    <string name="add_fragment_register_restaurant">식당 등록하기</string>

    <string name="my_page_edit_profile_title">내정보 수정</string>
    <string name="my_page_edit_profile_name">이름</string>
    <string name="my_page_edit_profile_name_changed">이름 변경</string>
    <string name="my_page_edit_profile_name_error">이름은 2자 이상이어야 합니다.</string>
    <string name="my_page_edit_profile_email">이메일</string>
    <string name="my_page_edit_profile_email_changed">이메일 변경</string>
    <string name="my_page_edit_profile_email_error">올바른 이메일 주소를 입력해주세요.</string>
    <string name="my_page_edit_profile_phone_number">전화번호</string>
    <string name="my_page_edit_profile_phone_number_changed">전화번호 변경</string>
    <string name="my_page_edit_btn_apply">완료</string>

    <string name="eat_deal_text_select_loc">지역 선택</string>
    <string name="eat_deal_text_my_position">내 주변</string>
    <string name="eat_deal_tab_name">EAT딜</string>
    <string name="mango_pick_story_tab_name">망고픽 스토리</string>
    <string name="top_list_tab_name">TOP 리스트</string>
    <string name="eat_deal_can_tack_out">포장 &amp; 픽업 가능한 EAT딜입니다.</string>
    <string name="eat_deal_before_price">&#8361; %s</string>
    <string name="eat_deal_after_price">&#8361; %s</string>
    <string name="eat_deal_text_total_view"><u>모든 EAT딜 보기</u></string>


    <string name="total_tab_name">전체</string>
    <string name="hollic_tab_name">홀릭</string>
    <string name="edit_profile">수정</string>
    <string name="following">팔로잉</string>

    <string name="follower">팔로워</string>
    <string name="event">이벤트</string>
    <string name="bought_eat_deal">구매한 EAT딜</string>
    <string name="eat_deal_alarm">EAT딜 입고알림</string>
    <string name="time_line">타임라인</string>
    <string name="review">리뷰</string>
    <string name="write_review">리뷰 쓰기</string>
    <string name="visited">가봤어요</string>
    <string name="photo">사진</string>
    <string name="wanna_go">가고싶다</string>
    <string name="my_list">마이리스트</string>
    <string name="book_mark">북마크</string>
    <string name="registered_restaurant">식당 등록하기</string>

    <string name="setting">설정</string>
    <string name="apply">적용</string>
    <string name="total_selected_cancel">전체 선택 취소</string>
    <string name="edit">편집</string>

    <string name="register_restaurant">식당 등록</string>
    <string name="notify_restaurant_name_and_loc">식당 이름과 위치를 알려주세요</string>
    <string name="notify_restaurant_name">*식당 이름 (예: 망고반점)</string>
    <string name="notify_restaurant_loc">*지역 및 위치 선택</string>
    <string name="notify_restaurant_more_info">조금 더 자세히 알려주세요</string>
    <string name="notify_restaurant_phone_number">전화번화 (예: 02-123-4567)</string>
    <string name="notify_restaurant_select_food_kind">음식 종류 선택</string>
    <string name="hansik">한식</string>
    <string name="ilsik">일식</string>
    <string name="joongsik">중식</string>
    <string name="yangsik">양식</string>
    <string name="world_food">세계음식</string>
    <string name="buffet">뷔페</string>
    <string name="cafe">카페</string>
    <string name="bar">주점</string>
    <string name="add">추가하기</string>
    <string name="buy">구매하기</string>
    <string name="complete">완료</string>
    <string name="more_view">더 보기</string>
    <string name="more_view_non">접기</string>

    <string name="visited_add">x%d 가봤어요</string>

    <string name="deal_text_view_term">사용기간 : </string>
    <string name="deal_text_view_res_info">식당 정보 보기</string>
    <string name="deal_text_pick_up_possible">포장 &amp; 픽업 가능한 EAT 딜입니다."</string>
    <string name="deal_text_restaurant_info">식당 소개</string>
    <string name="deal_text_menu_info">메뉴 소개</string>
    <string name="deal_text_notice_info">※ 유의사항 (꼭! 확인해주세요)</string>
    <string name="deal_text_how_to_use_info">※ 사용 방법</string>
    <string name="deal_text_refund_policy_info">※ 환불 규정</string>
    <string name="deal_text_question">문의</string>

    <string name="reply_btn_text_sue">댓글 신고</string>
    <string name="reply_btn_text_modify">댓글 수정</string>
    <string name="reply_btn_text_delete">댓글 삭제</string>
    <string name="reply_btn_text_cancel">취소</string>
    
    <string name="holic_text_explain_first_line">홀릭이란? 망고플레이트가 선정한 공식 우수 리뷰어, 홀릭!</string>
    <string name="holic_text_explain_second_line">홀릭은 누구보다 먹는 즐거움을 잘 알고 실천하며 리뷰를 통해 자신의 경험을 누구보다 활발히 공유하는 사용자입니다.</string>
</resources>