<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_bottom_nav_home"
        android:icon="@drawable/mango_home"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_bottom_nav_home_title" />

    <item
        android:id="@+id/menu_main_bottom_nav_discount"
        android:icon="@drawable/mango_discount"
        android:iconTint="@color/uncliked_color"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_bottom_nav_discount_title" />

    <item
        android:id="@+id/menu_main_bottom_nav_add"
        android:icon="@drawable/mango_add"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="add" />

    <item
        android:id="@+id/menu_main_bottom_nav_news"
        android:icon="@drawable/mango_news"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_bottom_nav_news_title" />

    <item
        android:id="@+id/menu_main_bottom_nav_my_page"
        android:icon="@drawable/mango_my_page"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_bottom_nav_my_page_title" />

</menu>
