<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/news_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/cliked_color"
        app:tabSelectedTextColor="@color/cliked_color"
        app:tabTextColor="@color/uncliked_color">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_tab_name" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hollic_tab_name" />
        </com.google.android.material.tabs.TabLayout>



    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news_tab_layout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/new_btn_great"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/great"
            android:background="@drawable/news_sort_btn_background"
            android:text="@string/news_text_great"
            android:textColor="@color/cliked_color"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/new_btn_good"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/new_btn_great"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/good"
            android:background="@drawable/news_sort_btn_background"
            android:text="@string/news_text_good"
            android:textColor="@color/cliked_color"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/new_btn_bad"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/new_btn_good"
            android:drawableLeft="@drawable/bad"
            android:background="@drawable/news_sort_btn_background"
            android:text="@string/news_text_bad"
            android:textColor="@color/cliked_color"/>

    </RelativeLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/news_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>