<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/loc_layout_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabIndicatorColor="@color/cliked_color"
            app:tabIndicatorGravity="top"
            app:tabMode="scrollable"
            app:tabTextColor="@color/main_tab_item_color">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_search_recommend_word" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_search_recent_word" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_search_look_for_friend_word" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_search_recent_word" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_search_look_for_friend_word" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/loc_sort_vp"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/home_search_layout_tab" />


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/loc_sort_nonapply_text_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    app:srcCompat="@drawable/profile" />

                <TextView
                    android:id="@+id/home_sort_select_text_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/edit"
                    android:textAlignment="center"
                    android:textColor="@color/blackForText" />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loc_select_btn_apply"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/loc_sort_apply_text_border"
                android:gravity="center_horizontal"
                android:text="@string/apply"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loc_select_btn_total_selected_cancel"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/loc_sort_nonapply_text_border"
                android:gravity="center_horizontal"
                android:text="@string/total_selected_cancel"
                android:textAlignment="center"
                android:textColor="@color/cliked_color" />

        </LinearLayout>
    </LinearLayout>


</FrameLayout>