<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_toolbar_underline"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mp_editName_img_arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/rightsheet_arrow_left" />

        <TextView
            android:id="@+id/mp_editName_text_arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/mp_editName_img_arrow_left"
            android:text="@string/my_page_edit_profile_name_changed"
            android:textColor="@color/cliked_color"
            android:textSize="19sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/mp_edit_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/my_page_edit_profile_name"
        android:textColor="@color/uncliked_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6" />

    <EditText
        android:id="@+id/mp_edit_et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:maxLines="1"
        android:textCursorDrawable="@color/cliked_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mp_edit_text_name" />

    <TextView
        android:id="@+id/mp_edit_text_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:text="@string/my_page_edit_profile_name_error"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mp_edit_et_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mp_edit_btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mp_btn_background_unclickable"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/my_page_edit_btn_apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


    </androidx.appcompat.widget.AppCompatButton>



</androidx.constraintlayout.widget.ConstraintLayout>